# GamePython2D

./: CLEANUP_REPORT.md  README.md  analyze_ai_behavior.py  clean_project.py  continue_curriculum.py  curriculum_trainer.py  debug_projectile_creation.py  debug_reward_system.py  debug_rewards_complete.py  demo_ai.py  final_comparison.py  fix_imports.py  main.py  precision_trainer.py  pyproject.toml  simple_shooting_test.py  smart_shooting_trainer.py  test_ai.py  test_ai_effectiveness.py  test_ai_shooting.py  test_aiming_system.py  test_graphs.py  test_tank_movement.py  train_ai.py  train_curriculum.py  training_monitor.py  validate_cleanup.py  verify_system.py
ai_logs/eval/: evaluations.npz
ai_logs/game_ai_model_10/: events.out.tfevents.1761657292.DESKTOP-VAIVB5O.18060.0
ai_logs/game_ai_model_100/: events.out.tfevents.1761825510.DESKTOP-VAIVB5O.23368.3
ai_logs/game_ai_model_101/: events.out.tfevents.1761825791.DESKTOP-VAIVB5O.20216.0
ai_logs/game_ai_model_102/: events.out.tfevents.1761826678.DESKTOP-VAIVB5O.4432.0
ai_logs/game_ai_model_103/: events.out.tfevents.1761826741.DESKTOP-VAIVB5O.21168.0
ai_logs/game_ai_model_104/: events.out.tfevents.1761827033.DESKTOP-VAIVB5O.21168.1
ai_logs/game_ai_model_105/: events.out.tfevents.1761827635.DESKTOP-VAIVB5O.21168.2
ai_logs/game_ai_model_106/: events.out.tfevents.1761828169.DESKTOP-VAIVB5O.21168.3
docs/: ADAPTIVE_AI.md  AI_COMPARISON.md  CURRICULUM_7_STAGES.md  DQN_LEARNING.md  ENEMY_LEARNING_AI.md  PURE_DQN_SYSTEM.md  TRAINING_MODE.md  XP_ORB_SYSTEM.md
src/gamepython2d/: __init__.py  ui.py  (+12 more)
tools/: README.md
(+134 files in other folders)
