[project]
name = "gamepython2d"
version = "0.1.0"
description = ""
authors = [
    {name = "Charles",email = "charles.xarrie@limayrac.fr"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Dépendances principales (Jeu)
    "pygame>=2.5.0",
    "numpy>=1.21.0",
    "dataclasses-json>=0.5.7",
    
    # Dépendances IA (Machine Learning)
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "torch>=2.0.0",
    "tensorboard>=2.13.0",
    
    # Dépendances analyse (Données & Graphiques)
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
]

[tool.poetry]
packages = [{include = "gamepython2d", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
